@@ -1,1 +1,2 @@
 *.rda
+*.out
